# code-functionality-predictor

./: .gitignore  backend.py  cli.py  dataset.py  eval.py  main.py  predictor.py  pyproject.toml  references.txt
outputs/desc-gen-gpt-5-mini/: 0.json  1.json  2.json  3.json
outputs/desc-gen-llama-3-8b/: 0.json  1.json  2.json  3.json
outputs/desc-gen-sonnet-4.5/: 0.json  1.json  2.json  3.json
outputs/test/: 0.json  1.json  2.json  4.json
prompts/: description_generation.txt  description_scorring.txt  predictor.txt
results/desc-gen-gpt-5-mini/: output_batch_0.json  output_batch_1.json  output_batch_2.json  output_batch_3.json  raw.json  summary.txt
results/desc-gen-llama-3-8b/: output_batch_0.json  output_batch_1.json  output_batch_2.json  output_batch_3.json  raw.json  summary.json  summary.txt
results/desc-gen-sonnet-4.5/: output_batch_0.json  output_batch_1.json  output_batch_2.json  output_batch_3.json  raw.json  summary.json  summary.txt
results/gpt-5-mini_120/: output_batch_1.json  output_batch_2.json  output_batch_3.json  summary.txt
results/llama_3_8b_120/: output_batch_1.json  output_batch_2.json  output_batch_3.json  summary.txt
results/sonnet4.5_120/: output_batch_1.json  output_batch_2.json  output_batch_3.json  summary.txt
results/test/: output_batch_0.json  output_batch_1.json  raw_metrics.json  summary.json  summary.txt
src/: backend.py  cli.py  dataset.py  errors.py  eval.py  predictor.py
src/eval/: base.py  desc_scorring.py  desc_similarity.py
src/predictor/: base.py  description.py
